# vibecode-ai-mentor

./: .env.example  .gitignore  .vibecode.example.yaml  BACKEND_TASKS.md  CLAUDE.md  CONTEXT.md  DEMO_READINESS_REPORT.md  DEVOPS_TASKS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  ML_TASKS.md  QA_ASSESSMENT_REPORT.md  QA_TASKS.md  README.md  ROADMAP.md  TEST_SUMMARY.md  pyproject.toml  requirements.txt  test_endpoints.py  uv.toml
.claude/: settings.local.json
.claude/agents/: backend-developer.md  devops-engineer.md  ml-embeddings-engineer.md  qa-tester.md
cli/: README.md  __init__.py  __main__.py
cli/commands/: __init__.py  analyze.py  index.py  search.py  serve.py  setup.py
cli/utils/: __init__.py  config.py  logging.py  output.py  progress.py
docker/: Dockerfile  docker-compose.yml
docs/: GEMINI_EMBEDDINGS_INTEGRATION.md
examples/: api_integration_example.py  chunk_parser_file.py  chunker_advanced_demo.py  chunker_demo.py  debug_parser_chunking.py  embeddings_database_demo.py  llm_client_demo.py  metrics_demo.py  parser_demo.py  test_chunker.py  test_gemini_embeddings.py  test_parser_class.py
scripts/: migrate.py  migrate_to_uv.py  setup_db.py  test_embeddings.py
src/: __init__.py  main.py
src/analyzer/: README_PARSER.md  __init__.py  chunker.py  metrics.py  parser.py
src/api/: __init__.py  app.py  dependencies.py  models.py  routes.py
src/core/: __init__.py  config.py  logging.py
src/db/: __init__.py  connection.py  models.py  repositories.py  schema.py
src/embeddings/: __init__.py  base.py  batch.py  factory.py  gemini.py  openai.py
src/generator/: __init__.py  llm_client.py  recommendation_service.py
src/search/: __init__.py  optimization.py  service.py  test_vector_search.py  vector_search.py
src/services/: __init__.py  analysis.py
tests/: __init__.py  conftest.py  test_runner.py  utils.py
tests/analyzer/: __init__.py  test_chunker.py  test_metrics.py  test_parser.py
tests/api/: __init__.py  test_endpoints.py
tests/core/: test_config.py
tests/db/: test_repositories.py
tests/demo/: backup_plans.md  demo_script.md  demo_validation.py  test_repositories.py
tests/demo/scenarios/: anti_pattern_detection.py  live_code_analysis.py  performance_showcase.py  vector_search_demo.py
tests/embeddings/: __init__.py  test_gemini.py
tests/generator/: __init__.py  test_llm_client.py
tests/integration/: test_analysis_pipeline.py
tests/performance/: __init__.py  test_load_testing.py
tests/search/: __init__.py  test_vector_search.py
tests/services/: test_analysis_service.py
